# bsonrs

./: Cargo.toml  LICENSE  README.md
src/: decode.rs  doc.rs  encode.rs  error.rs  lib.rs  macros.rs  object_id.rs  spec.rs  value.rs
src/serde_impl/: decode.rs  encode.rs
