[package]
name          = "bsonrs"
version       = "0.1.8"
license       = "MIT"
authors       = ["danc <dangcheng@hotmail.com>"]
description   = "bson data-interchange format"
documentation = "https://docs.rs/bsonrs"
homepage      = "https://github.com/danclive/bsonrs"
repository    = "https://github.com/danclive/bsonrs"
readme        = "README.md"
keywords      = ["bson"]
edition 	  = "2018"
exclude       = [
  ".gitignore",
  ".travis.yml",
  "deploy.sh",
  "test/**/*",
]

[dependencies]
indexmap = "1.0"
chrono = "0.4"
byteorder = "1.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_bytes = "0.11"
libc = "0.2"
rand = "0.6"
